# CASI-MATS-Application

./: README.md
decomposition_attack_dataset/: pyproject.toml
decomposition_attack_dataset/dataset/: README.md  manifest.json
decomposition_attack_dataset/dataset/items/012e173b-db8c-4cfe-ab88-1a0edf9ce92c/: meta.json
decomposition_attack_dataset/dataset/items/023735db-4de6-4f62-aaf3-e2b609b97c99/: meta.json
decomposition_attack_dataset/dataset/items/0c39cab3-2887-4e53-8990-5544e649a11b/: meta.json
decomposition_attack_dataset/dataset/items/14d5cc1b-665e-46fb-a64c-b20c7e6a8c40/: meta.json
decomposition_attack_dataset/dataset/items/1dde01aa-855a-4236-97b8-a8628ff460dd/: meta.json
decomposition_attack_dataset/dataset/items/1e6011f5-dbb4-4971-95f2-063c9f78a2fc/: meta.json
decomposition_attack_dataset/dataset/items/1ee52ebd-cb08-44ec-b988-626c0c9615bf/: meta.json
decomposition_attack_dataset/dataset/items/1fab26cf-3dc9-4cea-9348-fe1cf7c21f30/: meta.json
decomposition_attack_dataset/dataset/items/201a221f-3443-4f29-b867-dea56da30f53/: meta.json
decomposition_attack_dataset/dataset/items/2603722b-d570-4959-8852-b94aa73e67d8/: meta.json
decomposition_attack_dataset/dataset/schemas/: DatasetManifest.schema.json  ItemExpected.schema.json  ItemInput.schema.json  ItemMeta.schema.json
decomposition_attack_dataset/scripts/: make_dataset.py
decomposition_attack_dataset/src/decomposition_attack_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
decomposition_attack_dataset/src/ds/: generate.py  gpt.py  safety.py  schema.py  validate.py
(+82 files in other folders)
