[project]
name = "decomposition-attack-dataset"
version = "0.1.0"
description = "Safe, benign proxy dataset generator for decomposition attacks"
requires-python = ">=3.10"
authors = [{ name = "CASI-MATS" }]
readme = "README.md"
dependencies = [
  "pydantic>=2.5",
  "openai>=1.45.0",
  "tenacity>=8.2",
  "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ds*"]
